Finished the strategies for delta and geo indexing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1125 89a0fb20-889e-aefa-90f6-7c296b20d5cf